Fix for issue #3691
This solves the problem with the OK-button.

Someone should take a look at the styling/media queries for the button
for desktop view, that one does not look great, it hangs a bit too much
to the right. But for mobile devices it looks good now, and the issue
with the button is solved.

--- a/Shared/css/style.css
+++ b/Shared/css/style.css
@@ -2252,7 +2252,18 @@ ul.hamburgerList button.menuButton {
     height: 26px;
     opacity: 1.0;
   }
-
+  
+  #cookiemsg {
+	background-color: #fecc56;
+	z-index: 1000;
+	position: fixed;
+	bottom: 0px;
+	width: 100%;
+	height: 60px;
+	padding: 0 20px 0 0px;
+	display: flex;
+	text-align: center;
+	}
 }
 
 @media only screen and (max-width: 480px), only screen and (max-device-width: 480px) {
@@ -2291,7 +2302,7 @@ ul.hamburgerList button.menuButton {
   padding: 0 20px 0 0px;
   display: flex;
   text-align: center;
-}
+  }
 }
 /* Title for the subpages of the section-editor */
 .titles{
